--- a/python3/src/deep_blue_genome/deep_blue_genome.defaults.conf
+++ b/python3/src/deep_blue_genome/deep_blue_genome.defaults.conf
@@ -25,19 +25,20 @@
 
 
 [default]
-tmp_dir = /tmp  # Directory to place temporary directories in
-output_dir = .  # Directory to place generated output
+tmp dir = /tmp  # Directory to place temporary directories in
+output dir = .  # Directory to place generated output
 
 # Database connection info
-database_host =  # DNS or IP of host with database server 
-database_user =  # User name to connect with 
-database_password =  # password for user name 
-database_name = deep_blue_genome  # Name of database to use
+database host =  # DNS or IP of host with database server 
+database user =  # User name to connect with 
+database password =  # password for user name 
+database name = deep_blue_genome  # Name of database to use
 
 [morph]
-top_k = 100
+top k = 100
 
 [coexpnetviz]
 
-[data-prep]
-cache_dir =  # Directory to place cached data
+[prepare]
+cache dir =  # Directory to place cached data
+output dir =  # Unsetting output dir as you probably want it elsewhere than in the current directory
