Added config file for non-cli args, added Database.get_gene_by_name [tested]

--- a/python3/src/deep_blue_genome/cli.defaults.conf
+++ b/python3/src/deep_blue_genome/cli.defaults.conf
@@ -21,7 +21,7 @@
 #     tmp dir = value
 #     Tmp dir = value
 #
-# For advanced users see: https://docs.python.org/3.4/library/configparser.html#configparser.ExtendedInterpolation
+# For advanced users, see: https://docs.python.org/3.4/library/configparser.html#configparser.ExtendedInterpolation
 
 
 [default]
