Load into database: gene mapping, catalog of clusterings and gene expression matrices
And many various other things

--- a/python3/src/deep_blue_genome/main.defaults.conf
+++ b/python3/src/deep_blue_genome/main.defaults.conf
@@ -14,7 +14,7 @@
 # For advanced users, see: https://docs.python.org/3.4/library/configparser.html#configparser.ExtendedInterpolation
 
 
-[exception_handling]  # How to handle exceptional cases
+[exception_handlers]  # How to handle exceptional cases
 
 # Unknown gene: add, ignore or fail
 #
